# qiansai-health-monitor

./: .gitattributes  .gitignore  LICENSE  README.md
deployment/cat_lubancat/: README.md  pc_radar_viewer.py  pc_radar_wave_viewer.py  radar_serial_bridge.py  start_radar_bridge.sh
deployment/rk3576_slave/: README.md  pc_radar_viewer.py  pc_radar_wave_viewer.py  radar_serial_bridge.py
deployment/rk_web_ui/: README.md  cloudflared_config.yml.example  external_access_templates.md  frpc.ini.example  install_systemd.sh  lubancat_rk_gateway.py  package_check.py  rk3576_rk_gateway.py  rk_acceptance_checklist.md  rk_stack.env.example  rk_web_ui.env.example  rk_web_ui.service  self_check.py  server.py  start_rk_stack.sh  start_web.sh  start_web_pc.bat  start_web_pc_lan.bat  start_web_pc_secure.bat  start_web_secure.sh  test_lubancat_discovery.py  test_rk3576_discovery.py  uninstall_systemd.sh  yolo_detector.py
deployment/rk_web_ui/ui/: styles.css
docs/: architecture.md  demo_video.md  deployment.md  yolo_bed_state.md
health_monitor/: CMakeLists.txt  README.md
health_monitor/cmake/: rk3588-toolchain.cmake
health_monitor/desktop_client/: App.xaml  App.xaml.cs  HealthMonitorClient.csproj  MainWindow.xaml  MainWindow.xaml.cs  RadarDemoSource.cs
health_monitor/scripts/: setup-third-party.bat  setup-third-party.sh
health_monitor/src/: main.c
health_monitor/src/ai/: CMakeLists.txt  ai_inference.c  ai_inference.h  ai_test.c
health_monitor/src/radar/: CMakeLists.txt  r60_uart.c  r60_uart.h  r60abd1.c  r60abd1.h
health_monitor/src/ui/: app.js  index.html
health_monitor/src/webserver/: CMakeLists.txt  vital_signs_state.c  vital_signs_state.h  webserver.c  webserver.h
health_monitor/tools/: README.md  dev_start.py  lubancat_rk_gateway.py  r60abd1_sim.py  rk3576_rk_gateway.py  start_lubancat_rk_ui.py  start_rk3576_rk_ui.py  test_lubancat_rk_gateway.py  test_rk3576_rk_gateway.py  ws_bridge_server.py
qt_ui/: README.md  UART.py  UART_2.py  camera_client.py  main.py  radar_iface.py  requirements.txt  run.bat  run_board.sh  run_mock.bat  test_bedside_packet.py  test_camera_client.py  test_radar_iface_remote.py
yolo_bed_state/: README.txt
yolo_bed_state/config/: args.yaml  data.yaml
yolo_bed_state/metrics/: results.csv
yolo_bed_state/model/: best.pt  last.pt
yolo_bed_state/sample_train/labels/: train_00000_val_on_bed_Lying0015_jpg_rf_1f12044527a07a861b95f41d137a3e55_approved_1.txt  train_00001_val_on_bed_Lying0015-fotor-2024032801217_jpg_rf_a4959ddd9a796fa9f5c576f9f0015306_approved_1.txt  train_00002_val_on_bed_KakaoTalk_20240328_004949261_07-fotor-2024032821018_jpg_rf_6dd84859ed382bec03a5a568f7e8089a.txt  train_00003_val_on_bed_Lying0014-fotor-20240327235128_jpg_rf_b8060c9efbde5969b65c677b4b9abd95.txt  train_00004_val_8_478.txt  train_00005_val_on_bed_Lying0002-fotor-202403272270_jpg_rf_41d81a58e3d7b14c7c158a0deeab1e80.txt  train_00006_val_on_bed_Lying0015-fotor-202403280918_jpg_rf_3757c8595aa86eae9be774c4a020e705.txt  train_00007_val_on_bed_Lying0006-fotor-20240327223720_jpg_rf_0469e4054fa0f4b24f19332fc460369a.txt  train_00008_val_on_bed_KakaoTalk_20240328_004945964_11-fotor-2024032812738_jpg_rf_2594affed4b907573f9238a8f3c95377.txt  train_00009_val_on_bed_Lying0015_jpg_rf_61c16f90a12de67a64195e25bffc551b.txt  train_00010_val_IMG_3068_jpg_rf_e45f0dd6c6f881c0ae85cce61087bb07.txt  train_00011_val_8_427.txt  train_00012_val_on_bed_Lying0024_jpg_rf_23e7ff0c737e9d9912f294dde5f9ff29_approved_1.txt  train_00013_val_8_515.txt  train_00014_train_8_125.txt  train_00015_val_on_bed_Lying0017-fotor-2024032804613_jpg_rf_f59ef2e7e48b60e04524562f55ed0a3c_approved_1.txt  train_00016_val_2023-08-07-184111_jpg_rf_760051807e17790e5f498dc405f6252f.txt  train_00017_val_8_335.txt  train_00018_val_on_bed_KakaoTalk_20240328_004945964_23-fotor-2024032815331_jpg_rf_b233f8b07b956948457443e465a1d715.txt  train_00019_val_2023-08-07-181541_jpg_rf_a25d6a18e6938b99c522a3f4954bb956.txt  train_00020_val_IMG_3221_jpg_rf_982ebbbd692145d04f24e40feee43cac.txt  train_00024_val_8_1031.txt  train_00025_val_8_1035.txt  (+7 more)
(+30 files in other folders)
